Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -756,22 +756,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ganehs'"
+       "'Ganehs rao'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"ganehs r\".capitalize()"
+    "\"ganehs rao\".capitalize()"
    ]
   },
   {
