Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -771,7 +771,8 @@
     }
    ],
    "source": [
-    "\"ganehs rao\".capitalize()\n"
+    "\"ganehs rao\".capitalize()\n",
+    "\"ganehs rao\"apitalize()"
    ]
   },
   {
