Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -756,23 +756,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ganehs rao'"
+       "'Ganehs Rao'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"ganehs rao\".capitalize()\n",
-    "\"ganehs rao\"apitalize()"
+    "\"ganehs rao\". title()"
    ]
   },
   {
